welcome.lessons.welcome.array.array123.Array123.scala.error
array123:9: error: type mismatch;
 found   : Boolean
 required: Int
          if (nums(i+2 == 3)) {
                       ^